--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,11 @@ html {
 .app{
 text-align: center;
 }
-h1,h2{
+p{
  text-align:center;
  color:red;
 }
 body {
   margin: 0;
-  background-color: #3f3f3f;
+  background-color: #ffffff;
 }
